@@ -30,6 +30,17 @@
  */
 class SpecialLog extends SpecialPage {
 
+	/**
+	 * List log type for which the target is a user
+	 * Thus if the given target is in NS_MAIN we can alter it to be an NS_USER
+	 * Title user instead. 
+	 */
+	private $typeOnUser = array(
+		'block',
+		'newusers',
+		'right',
+	);
+
 	public function __construct() {
 		parent::__construct( 'Log' );
 	}
@@ -82,6 +93,20 @@ class SpecialLog extends SpecialPage {
 				$qc = array( 'ls_field' => 'target_author_id', 'ls_value' => $offender->getId() );
 			} elseif ( $offender && IP::isIPAddress( $offender->getName() ) ) {
 				$qc = array( 'ls_field' => 'target_author_ip', 'ls_value' => $offender->getName() );
+			}
+		}
+
+		# Some log types are only for a 'User:' title but we might have been given
+		# only the username instead of the full title 'User:username'. This part try
+		# to lookup for a user by that name and eventually fix user input. See bug 1697.
+		if( in_array( $opts->getValue( 'type' ), $this->typeOnUser ) ) {
+			# ok we have a type of log which expect a user title.
+			$target = Title::newFromText( $opts->getValue( 'page' ) );
+			if( $target->getNamespace() === NS_MAIN ) {
+				# User forgot to add 'User:', we are adding it for him
+				$opts->setValue( 'page',
+					Title::makeTitleSafe( NS_USER, $opts->getValue( 'page' ) )
+				);
 			}
 		}
 
